chat nameplate
* improved chat nameplates
* nameplates on chat and tablist are now trimmed (no tailing whitespaces)
* removed chat message badges for the non-sender names
* parsing of chat message nameplates is now case insensitive